# overcoming-the-incentive-collapse-paradox

./: .gitignore  README.md  pyproject.toml
configs/: acs.yaml  pew.yaml  protein.yaml  robustness.yaml
scripts/: run_smoke.sh
src/experiments/: acs.py  common.py  pew.py  protein.py  robustness.py
src/incentive/: design.py  simulation.py
src/inference/: estimators.py  intervals.py  sampling.py
src/plotting/: figures.py
tests/: test_acs_experiment.py  test_budget.py  test_estimators.py  test_experiment_common.py  test_figures.py  test_intervals.py  test_pew_experiment.py  test_protein_experiment.py  test_robustness_experiment.py  test_sampling.py  test_simulation.py
