[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overcoming-incentive-collapse-paradox"
version = "0.1.0"
description = "Code for the Overcoming the Incentive Collapse Paradox experiments."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "pyreadstat",
    "pytest",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "pyyaml",
    "xgboost",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
